Moved the feed message aggregator and the feed message type enumeration to the gwt shared package. Made FeedMessageType gwt-friendly (and unweirded a couple of things). Converted the integer type to an enum type. Embedded the category and set on construction. Replaced a great slew of switch (type) { case 101: ... } with switches instead on the enum type.